--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Master of Science in Data Science, Bachelor of Arts in Mathematical Sciences with a Concentration in Statistics</h1>
+								<p></p>
 							</div>
 						</div>
 						<nav>
@@ -360,3 +359,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
