--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Master of Science in Data Science, Bachelor of Arts in Mathematical Sciences with a Concentration in Statistics</h1>
-								<p></p>
+								<h1>John Sun</h1>
+								<p>Large-Scale Machine Learning Expert with experience on kaggle.com competitions, data-visualization, time-series prediction, portfolio selection.</p>
 							</div>
 						</div>
 						<nav>
@@ -359,4 +359,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
