--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>John Sun</h1>
-								<p>Large-Scale Machine Learning Expert with experience on kaggle.com competitions, data-visualization, time-series prediction, portfolio selection.</p>
+								<p>Large-Scale Supervised Machine Learning, kaggle.com competitior, data-visualization, time-series prediction, portfolio selection, unsupervised learning .</p>
 							</div>
 						</div>
 						<nav>
@@ -359,6 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
