--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#Publications">Intro</a></li>
-								<li><a href="#Competition">Work</a></li>
-								<li><a href="#Education">About</a></li>
+								<li><a href="#Publications">Publications</a></li>
+								<li><a href="#Competition">Competitions</a></li>
+								<li><a href="#Education">Education</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -360,6 +360,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
