--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>The Association between Poverty and Commute time using Multiple Linear Regression and Decision trees on Census Data (2018)
 arXiv:1909.00061</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Imbalanced Data Classification using Primal Estimated Subgradient Solver for Support Vector Machine, 2021
+https://arxiv.org/abs/2206.09311.</p>
+								<p> A phase I, first-in-human study to evaluate the safety and tolerability, pharmacokinetics, and pharmacodynamics
+of MRG-001 in healthy subjects
+https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 							</article>
 
 						<!-- Work -->
@@ -360,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
