--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#Publications">Publications</a></li>
-								<li><a href="#Competition">Competitions</a></li>
+								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#Education">Education</a></li>
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -364,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
