--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 							</article>
 
 						<!-- Work -->
-							<article id="Competitions">
-								<h2 class="major">Competitions</h2>
+							<article id="Projects">
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>CSIRO Image2Biomass 2307/3802 Rank https://www.kaggle.com/jsdata11/competitions Competed for 3 prizes (total prize pool: USD 75,000) </p>
+								<p>571/2257 Rank https://www.kaggle.com/competitions/restaurant-revenue-prediction (total prize pool: USD 30,000)</p>
 							</article>
 
 						<!-- About -->
@@ -364,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
