--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>John Sun</h1>
-								<p>Large-Scale Supervised Machine Learning, kaggle.com competitior, data-visualization, time-series prediction, portfolio selection, unsupervised learning .</p>
+								<p>Large-Scale Supervised Machine Learning, kaggle.com competitior, data-visualization, time-series prediction, portfolio selection, unsupervised learning, Statistics, SQL .</p>
 							</div>
 						</div>
 						<nav>
@@ -364,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
