--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>CSIRO Image2Biomass 2307/3802 Rank https://www.kaggle.com/jsdata11/competitions Competed for 3 prizes (total prize pool: USD 75,000) </p>
-								<p>571/2257 Rank https://www.kaggle.com/competitions/restaurant-revenue-prediction (total prize pool: USD 30,000)</p>
+								<p>Restaurant Revenue Prediction 571/2257 Rank https://www.kaggle.com/competitions/restaurant-revenue-prediction (total prize pool: USD 30,000)</p>
 							</article>
 
 						<!-- About -->
 							<article id="Education">
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Bachelor of Arts in Mathematical Sciences with a Concentration in Statistics
+								Colby College, Maine</p>
+								<p> Master of Science in Data Science State University of New York, Albany (3.76/4.00)</p>
 							</article>
 
 						<!-- Contact -->
@@ -364,6 +366,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
