--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 							<article id="Education">
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Bachelor of Arts in Mathematical Sciences with a Concentration in Statistics
-								Colby College, Maine</p>
+								<p>Bachelor of Arts in Mathematical Sciences with a Concentration in Statistics </p>
+								
+								<p> </p>Colby College, Maine</p>
+								
 								<p> Master of Science in Data Science State University of New York, Albany (3.76/4.00)</p>
 							</article>
 
@@ -343,6 +345,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
