--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								
+								<p> Kaggle.com is a world-wide olympiad for machine learning. </p>
+								
 								<p>CSIRO Image2Biomass 2307/3802 Rank https://www.kaggle.com/jsdata11/competitions Competed for 3 prizes (total prize pool: USD 75,000) </p>
 								<p>Restaurant Revenue Prediction 571/2257 Rank https://www.kaggle.com/competitions/restaurant-revenue-prediction (total prize pool: USD 30,000)</p>
 							</article>
@@ -345,6 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
