--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 								
 								<p> </p>Colby College, Maine</p>
 								
-								<p> Master of Science in Data Science State University of New York, Albany (3.76/4.00)</p>
+								<p> Master of Science in Data Science </p>
+								<p> State University of New York, Albany (3.76/4.00)</p>
 							</article>
 
 						<!-- Contact -->
@@ -348,6 +349,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
