--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 								<h2 class="major">Publications</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>The Association between Poverty and Commute time using Multiple Linear Regression and Decision trees on Census Data (2018)
-arXiv:1909.00061</a>.</p>
+.</p> <a href="https://arxiv.org/abs/1909.00061" target="_blank">arXiv:1909.00061</a>
+
 								<p>Imbalanced Data Classification using Primal Estimated Subgradient Solver for Support Vector Machine, 2021
 https://arxiv.org/abs/2206.09311.</p>
 								<p> A phase I, first-in-human study to evaluate the safety and tolerability, pharmacokinetics, and pharmacodynamics
@@ -349,6 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
