--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 							<article id="Contact">
 								<h2 class="major">Contact</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p> jsun@alumni.albany.edu</p>
+								<p> <a href="mailto:jsun@alumni.albany.edusubject=Job%20Opportunity%20Inquiry&body=Hello,%20I%20am%20reaching%20out%20regarding%20potential%20job%20opportunities."
+   style="background-color:#28a745;color:white;padding:10px 16px;text-decoration:none;border-radius:5px;font-weight:bold;">
+   Email Me About Job Opportunities
+</a>
+
+</p>
 
 							</article>
 
@@ -350,6 +355,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
