--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>John Sun</h1>
-								<p>Large-Scale Supervised Machine Learning, kaggle.com competitior, data-visualization, time-series prediction, portfolio selection, unsupervised learning, Statistics, SQL .</p>
+								<p>Large-Scale and Efficient Supervised Machine Learning, kaggle.com competitor, time-series prediction, portfolio selection, clustering, Statistics, SQL ,data-visualization.</p>
 							</div>
 						</div>
 						<nav>
@@ -50,10 +50,10 @@
 <a href="https://arxiv.org/abs/1909.00061" target="_blank">arXiv:1909.00061</a>.</p> 
 
 								<p>Imbalanced Data Classification using Primal Estimated Subgradient Solver for Support Vector Machine, 2021
-https://arxiv.org/abs/2206.09311.</p>
+ <a href="https://arxiv.org/abs/2206.09311." target="_blank">https://arxiv.org/abs/2206.09311.</a> </p>
 								<p> A phase I, first-in-human study to evaluate the safety and tolerability, pharmacokinetics, and pharmacodynamics
 of MRG-001 in healthy subjects
-https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/37633275/  target="_blank">https://pubmed.ncbi.nlm.nih.gov/37633275/ </a>  </p>
 							</article>
 
 						<!-- Work -->
@@ -63,7 +63,7 @@ https://pubmed.ncbi.nlm.nih.gov/37633275/</p>
 								
 								<p> Kaggle.com is a world-wide olympiad for machine learning. </p>
 								
-								<p>CSIRO Image2Biomass 2307/3802 Rank https://www.kaggle.com/jsdata11/competitions Competed for 3 prizes (total prize pool: USD 75,000) </p>
+								<p>CSIRO Image2Biomass 2307/3802 Rank  https://www.kaggle.com/jsdata11/competitions Competed for 3 prizes (total prize pool: USD 75,000) </p>
 								<p>Restaurant Revenue Prediction 571/2257 Rank https://www.kaggle.com/competitions/restaurant-revenue-prediction (total prize pool: USD 30,000)</p>
 							</article>
 
@@ -355,6 +355,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
