--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a href="https://arxiv.org/abs/1909.00061" target="_blank">arXiv:1909.00061</a>.</p> 
 
 								<p>Imbalanced Data Classification using Primal Estimated Subgradient Solver for Support Vector Machine, 2021
- <a href="https://arxiv.org/abs/2206.09311." target="_blank">https://arxiv.org/abs/2206.09311.</a> </p>
+ <a href="https://arxiv.org/abs/2206.09311" target="_blank">https://arxiv.org/abs/2206.09311.</a> </p>
 								<p> A phase I, first-in-human study to evaluate the safety and tolerability, pharmacokinetics, and pharmacodynamics
 of MRG-001 in healthy subjects
 <a href="https://pubmed.ncbi.nlm.nih.gov/37633275/  target="_blank">https://pubmed.ncbi.nlm.nih.gov/37633275/ </a>  </p>
@@ -355,6 +355,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
