--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>John Sun</h1>
-								<p>Large-Scale and Efficient Supervised Machine Learning, kaggle.com competitor, time-series prediction, portfolio selection, clustering, Statistics, SQL, data-visualization.</p>
+								<p>Large-Scale and Efficient Supervised Machine Learning, kaggle.com competitor,  Statistician, Convex Optimization, data-visualization, time-series prediction, portfolio selection, clustering, Structured Query Language. </p>
 							</div>
 						</div>
 						<nav>
@@ -374,6 +374,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
