--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  <a href="https://arxiv.org/abs/2206.09311" target="_blank">https://arxiv.org/abs/2206.09311.</a> </p>
 								<p> A phase I, first-in-human study to evaluate the safety and tolerability, pharmacokinetics, and pharmacodynamics
 of MRG-001 in healthy subjects
-<a href="https://pubmed.ncbi.nlm.nih.gov/37633275/  target="_blank">https://pubmed.ncbi.nlm.nih.gov/37633275/ </a>  </p>
+<a href="https://pubmed.ncbi.nlm.nih.gov/37633275/  target="_blank">https://pubmed.ncbi.nlm.nih.gov/37633275/. </a>  </p>
 							</article>
 
 						<!-- Work -->
@@ -374,6 +374,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
