--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=WAk6OjlrVaE27EFVjIWWP8XQtfCSlHy3CA7zaMLWIxQ&cl=ffffff&w=a"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -374,6 +375,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
